@@ -1,6 +1,8 @@
 Revision history for Perl extension URI::db.
 
 0.11
+      - Fixed URI::oracle to properly generate a DBI DSN with no host name or
+        port.
 
 0.10  2013-12-20T00:16:30Z
       - Initial version.
